# pycon-se-tg-bot

./: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  talks.json
.github/workflows/: build-and-push.yml  deploy.yaml
pycon_se_bot/: bot.py  main.py  models.py  random_fika.py  settings.py
scripts/: schedule_downloader.py  setup_db.py
